--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <title>Watch Piacenza from above</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <h1>The Navati Tower</h1>
+        </a>
+    </header>
+    <section>image</section>
+    <section>my tower</section>
+    <section>position, opening times</section>
+    <footer>contacts</footer>
     <h1>Watch Piacenza from above!</h1>
 </body>
 </html>
