--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,11 +10,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Watch Piacenza from above</title>
 </head>
+
 <body>
     <header>
         <a href="index.html">
             <h1>The Navati Tower</h1>
         </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Gallery</a></li>
+                <li><a href="#">Tours</a></li>
+            </ul>
+        </nav>
     </header>
     <section>image</section>
     <section>my tower</section>
@@ -21,4 +30,5 @@
     <footer>contacts</footer>
     <h1>Watch Piacenza from above!</h1>
 </body>
+
 </html>
