--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h1 id="logo">The Navati Tower</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Tours</a></li>
