--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
         </a>
         <nav>
             <ul id="menu">
-                <li><a href="index.html">Home</a></li>
                 <li><a href="#">Gallery</a></li>
                 <li><a href="#">Tours</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
     </header>
-    <section>image</section>
+    <section>
+        <div id="hero-image"></div>
+    </section>
     <section>my tower</section>
     <section>position, opening times</section>
     <footer>contacts</footer>
