--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
             </ul>
         </nav>
     </header>
-    <section>
+    <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2></h2>
+        </div>
     </section>
     <section>my tower</section>
     <section>position, opening times</section>
